Task5/admin_front_end_app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: admin-front-end-app
spec:
  selector:
    matchLabels:
      app: admin-front-end
  template:
    metadata:
      labels:
        app: admin-front-end
    spec:
      containers:
        - name: nginx
          image: nginx:latest
          ports:
            - containerPort: 80
