Task5/front_end_app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: front-end-app
spec:
  selector:
    matchLabels:
      app: front-end
  template:
    metadata:
      labels:
        app: front-end
    spec:
      containers:
        - name: nginx
          image: nginx:latest # Using the latest NGINX image
          ports:
            - containerPort: 80
